Fix nav on mobile

--- a/source/stylesheets/partials/_header.scss
+++ b/source/stylesheets/partials/_header.scss
@@ -1,11 +1,11 @@
 .container-bleed > .navbar-header {
-  margin: 0;
+  display: inline-block;
+  margin: 0 0 0 10px;
 
   @media (min-width: $screen-sm-min) {
     margin-left: 20px;
   }
 }
-
 
 .navbar-default a.navbar-brand {
   color: $black-lighter;
@@ -50,12 +50,12 @@
         margin: 0 .4em 0 0;
         padding: .8em 1.2em;
 
-        @media (max-width: $screen-xs-max) {
-          display: block;
-          margin: .4em 0;
-          padding: .8em 0;
-          text-align: center;
-        }
+        // @media (max-width: $screen-xs-max) {
+        //   display: block;
+        //   margin: .4em 0;
+        //   padding: .8em 0;
+        //   text-align: center;
+        // }
 
         &.active,
         &:focus {
@@ -102,6 +102,9 @@
 }
 
 .navbar-right {
+  float: right; //!!!//
+  margin-right: 0;
+
   @media (min-width: $screen-sm-min) {
     margin-right: 0;
   }
